syntax = "proto3";
package payment_v1;
import "google/protobuf/timestamp.proto";


message Provider {
  string id = 1;
  string name = 2;
  ProviderMethod method = 3;
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
  google.protobuf.Timestamp discardedAt = 6;
}

enum ProviderMethod  {
  BANK = 0;
  CRYPTO_CURRENCY = 1;
  DEBIT = 2;
  CREDIT = 3;
  CASH_ON_DELIVERY = 4;
}

message FindPaymentProvidersRequest {
  string name = 1;
}

message FindPaymentProvidersResponse {
  repeated Provider data = 1;
}

message FindPaymentProviderByIdRequest {
  string id = 1;
}